dataset1235/2025-2/805158916/users/1651421245/executions/2118643220_1420232579.log
== RUN (2025-09-01 14:05:43)
-- CODE: 
coroa = int(input("valor em coroas suecas: ,2"))
br= coroa*(0.46)
print(br,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
valor em coroas suecas: ,22.3000000000000003 2
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
valor em coroas suecas: ,25.5200000000000005 2
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
valor em coroas suecas: ,20.46 2
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
valor em coroas suecas: ,23.22 2
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
valor em coroas suecas: ,29.66 2
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
valor em coroas suecas: ,24.6000000000000005 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:03:56)
-- CODE: 
coroa = int(input("valor em coroas suecas: "))
br= coroa*0.46
print(br)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
valor em coroas suecas: 2.3000000000000003
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
valor em coroas suecas: 5.5200000000000005
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
valor em coroas suecas: 0.46
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
valor em coroas suecas: 3.22
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
valor em coroas suecas: 9.66
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
valor em coroas suecas: 4.6000000000000005
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:03:35)
-- CODE: 
coroa = int(imput("valor em coroas suecas: "))
br= coroa*0.46
print(br)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    coroa = int(imput("valor em coroas suecas: "))
                ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    coroa = int(imput("valor em coroas suecas: "))
                ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    coroa = int(imput("valor em coroas suecas: "))
                ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    coroa = int(imput("valor em coroas suecas: "))
                ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    coroa = int(imput("valor em coroas suecas: "))
                ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    coroa = int(imput("valor em coroas suecas: "))
                ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:04:54)
-- CODE: 
coroa = int(input("valor em coroas suecas: "))
br= (coroa)*0.46
print(br,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
valor em coroas suecas: 2.3000000000000003 2
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
valor em coroas suecas: 5.5200000000000005 2
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
valor em coroas suecas: 0.46 2
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
valor em coroas suecas: 3.22 2
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
valor em coroas suecas: 9.66 2
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
valor em coroas suecas: 4.6000000000000005 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:05:11)
-- CODE: 
coroa = int(input("valor em coroas suecas: "))
br= (coroa*0.46)
print(br,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
valor em coroas suecas: 2.3000000000000003 2
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
valor em coroas suecas: 5.5200000000000005 2
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
valor em coroas suecas: 0.46 2
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
valor em coroas suecas: 3.22 2
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
valor em coroas suecas: 9.66 2
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
valor em coroas suecas: 4.6000000000000005 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:05:58)
-- CODE: 
coroa = int(input("valor em coroas suecas:"))
br= coroa*(0.46)
print(br,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
valor em coroas suecas:2.3000000000000003 2
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
valor em coroas suecas:5.5200000000000005 2
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
valor em coroas suecas:0.46 2
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
valor em coroas suecas:3.22 2
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
valor em coroas suecas:9.66 2
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
valor em coroas suecas:4.6000000000000005 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:07:14)
-- CODE: 
coroa = int(input("valor em coroas suecas:"))
br= coroa*(0.46)
print(round(br,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
valor em coroas suecas:2.3
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
valor em coroas suecas:5.52
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
valor em coroas suecas:0.46
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
valor em coroas suecas:3.22
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
valor em coroas suecas:9.66
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
valor em coroas suecas:4.6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:07:08)
-- CODE: 
coroa = int(input("valor em coroas suecas:"))
br= coroa*(0.46)
print(round(br,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
valor em coroas suecas:2.3
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
valor em coroas suecas:5.52
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
valor em coroas suecas:0.46
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
valor em coroas suecas:3.22
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
valor em coroas suecas:9.66
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
valor em coroas suecas:4.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:06:50)
-- CODE: 
coroa = int(input("valor em coroas suecas:"))
br= coroa*(0.46)
print(br,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
valor em coroas suecas:2.3000000000000003 2
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
valor em coroas suecas:5.5200000000000005 2
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
valor em coroas suecas:0.46 2
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
valor em coroas suecas:3.22 2
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
valor em coroas suecas:9.66 2
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
valor em coroas suecas:4.6000000000000005 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:05:24)
-- CODE: 
coroa = int(input("valor em coroas suecas: "))
br= coroa*(0.46)
print(br,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
valor em coroas suecas: 2.3000000000000003 2
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
valor em coroas suecas: 5.5200000000000005 2
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
valor em coroas suecas: 0.46 2
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
valor em coroas suecas: 3.22 2
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
valor em coroas suecas: 9.66 2
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
valor em coroas suecas: 4.6000000000000005 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
